First changes Login screen added

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1,6 +1,6 @@
 // app global css in Sass form
 .text-grand-hotel
-  font-family: 'Grand Hotel', 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif
+  font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif
 
 .small-screen-only
   @media (max-width: $breakpoint-xs-max)
