Changed Style Login screen added

--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -26,7 +26,7 @@ $warning   : #F2C037
 //This is a greenish colour palette i found online. Use it or change it!
 
 /* SCSS HEX */
-$nyanza: #d8f3dcff
+$nyanza: #d8f3dcff           1111 0011
 $turquoise-green: #b7e4c7ff
 $turquoise-green-2: #95d5b2ff
 $ocean-green: #74c69dff
