added logo and updated fonts

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -18,8 +18,13 @@
 .login-size
   width: 250px
 
-
 .my-align-right
   text-align: right
   padding: 5px
 
+body
+  font-family: 'Open Sans', sans-serif
+
+.logo-text
+  font-family: 'Montserrat', sans-serif
+  font-weight: 500
