--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -28,3 +28,6 @@ body
 .logo-text
   font-family: 'Montserrat', sans-serif
   font-weight: 500
+
+.menu-list .q-item
+  border-radius: 0 32px 32px 0
