force visible scrollbar at all time

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -25,6 +25,10 @@
 body
   font-family: 'Open Sans', sans-serif
 
+html
+  //Force scrollbar visible at all times
+  overflow-y: scroll
+
 .logo-text
   font-family: 'Montserrat', sans-serif
   font-weight: 500
