made logo clickable, redirects to home page

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -28,6 +28,8 @@ body
 html
   //Force scrollbar visible at all times
   overflow-y: scroll
+.logo
+  cursor: pointer
 
 .logo-text
   font-family: 'Montserrat', sans-serif
