--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1,3 +1,5 @@
+@import 'quasar.variables.sass'
+
 // app global css in Sass form
 .small-screen-only
   @media (max-width: $breakpoint-xs-max)
@@ -37,3 +39,8 @@ html
 
 .menu-list .q-item
   border-radius: 0 32px 32px 0
+
+.links-primary
+  a, a:active, a:hover, a:visited
+    text-decoration: none
+    color: $primary
