--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -36,6 +36,8 @@ html
 .logo-text
   font-family: 'Montserrat', sans-serif
   font-weight: 500
+  color: white
+  text-decoration: none
 
 .menu-list .q-item
   border-radius: 0 32px 32px 0
