adapted emoji picker colors to app

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -47,10 +47,8 @@ html
     text-decoration: none
     color: $primary
 
-.margin-15
-  margin: 20px
 
-.flex-start
-  display: flex
-  align-items: flex-start
-  outline: none
+.emoji-picker-color-override
+  --ep-color-bg: #{$dark} !important
+  --ep-color-sbg: #{$dark} !important
+  --ep-color-active: #{$primary} !important
