--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -24,12 +24,65 @@
   text-align: right
   padding: 5px
 
+// Overall app theme //
 body
   font-family: 'Open Sans', sans-serif
 
 html
-  //Force scrollbar visible at all times
+  // Force scrollbar visible at all times
   overflow-y: scroll
+
+// Override default dark body background
+body.body--dark
+  background-color: $dark
+
+// Override default dark card background
+.q-card--dark
+  background-color: rgba($dark, 0.2)
+
+// Prepare background for color switching using transparent gradients
+.page-background:before
+  content: ""
+  display: block
+  position: fixed
+  left: 0
+  top: 0
+  height: 100vh
+  width: 100vw
+
+  background: linear-gradient(160deg, rgba(0,0,0,0), $dark 50%)
+  transition: background-color 1000ms ease
+
+//very colorful example //
+//background-image: linear-gradient(0deg,#cf5c5c,#c19b4a,#def2a0,#c6ee4a,#42eca6,#64b3d9,#208ea2,#498ada,#5b73df,#897ed3,#cf5c5c,#c19b4a)
+//opacity: 0.7
+//background-size: 100% 1100%
+//background-image: linear-gradient(0deg, $dark, $dark, #062b13, $dark, $dark)
+//background-size: 100% 600%
+//animation: animateBg 10s linear infinite
+
+//@keyframes animateBg
+//  0%
+//    background-position: 0% 0%
+//  100%
+//    background-position: 0% 100%
+
+// Configure color schemes for LayoutColorChange plugin //
+
+.page-background.forum:before
+  background-color: #404040
+
+.page-background.posteditor:before
+  background-color: #552f6d
+
+.page-background.userprofile:before
+  background-color: #2c5e92
+
+.page-background.myposts:before
+  background-color: #0e5c2a
+
+// MainLayout styling //
+
 .logo
   cursor: pointer
 
@@ -42,11 +95,26 @@ html
 .menu-list .q-item
   border-radius: 0 32px 32px 0
 
+.header-background
+  background-color: rgba($dark, 0.0)
+  transition: background-color 300ms ease
+
+.header-background.scroll
+  background-color: rgba($dark, 0.7)
+
+.q-drawer--dark
+  background-color: rgba($dark, 0)
+
+.q-drawer--dark.q-drawer--mobile
+  background-color: $dark
+
+
+// Miscellaneous styles //
+
 .links-primary
   a, a:active, a:hover, a:visited
     text-decoration: none
     color: $primary
-
 
 .emoji-picker-color-override
   --ep-color-bg: #{$dark} !important
