--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -38,11 +38,17 @@ body.body--dark
 
 // Override default dark card background
 .q-card--dark
-  background-color: rgba($dark, 0.2)
+  background-color: rgba($dark, 0.3)
+  //background-color: $dark
+
+// Override default dark editor background
+.q-editor--dark
+  background-color: rgba($dark, 0.3)
 
 // Prepare background for color switching using transparent gradients
 .page-background:before
   content: ""
+  z-index: -2
   display: block
   position: fixed
   left: 0
@@ -52,6 +58,9 @@ body.body--dark
 
   background: linear-gradient(160deg, rgba(0,0,0,0), $dark 50%)
   transition: background-color 1000ms ease
+
+
+  //background: linear-gradient(#c074b2, #8ab5e8)
 
 //very colorful example //
 //background-image: linear-gradient(0deg,#cf5c5c,#c19b4a,#def2a0,#c6ee4a,#42eca6,#64b3d9,#208ea2,#498ada,#5b73df,#897ed3,#cf5c5c,#c19b4a)
@@ -68,6 +77,18 @@ body.body--dark
 //    background-position: 0% 100%
 
 // Configure color schemes for LayoutColorChange plugin //
+
+//.page-background:after
+//  content: ""
+//  display: block
+//  position: fixed
+//  z-index: -1
+//  left: 0
+//  top: 0
+//  height: 100vh
+//  width: 100vw
+//  background: linear-gradient(180deg, rgba(0,0,0,0), $dark)
+
 
 .page-background.forum:before
   background-color: #404040
