--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -46,7 +46,7 @@ body.body--dark
   background-color: rgba($dark, 0.3)
 
 // Prepare background for color switching using transparent gradients
-.page-background:before
+.background-gradient
   content: ""
   z-index: -2
   display: block
@@ -59,57 +59,74 @@ body.body--dark
   background: linear-gradient(160deg, rgba(0,0,0,0), $dark 50%)
   transition: background-color 1000ms ease
 
+  // Test
+  //background: linear-gradient(90deg, #c074b2, #8ab5e8)
+  //background: linear-gradient(90deg, #2c5e92 0%, #552f6d 80%)
+  //opacity: 1
 
-  //background: linear-gradient(#c074b2, #8ab5e8)
+// Test //
+.background-gradient-darken
+  content: ""
+  display: block
+  position: fixed
+  z-index: -1
+  left: 0
+  top: 0
+  height: 100vh
+  width: 100vw
+  background: linear-gradient(180deg, rgba(0,0,0,0), $dark)
 
-//very colorful example //
-//background-image: linear-gradient(0deg,#cf5c5c,#c19b4a,#def2a0,#c6ee4a,#42eca6,#64b3d9,#208ea2,#498ada,#5b73df,#897ed3,#cf5c5c,#c19b4a)
-//opacity: 0.7
-//background-size: 100% 1100%
-//background-image: linear-gradient(0deg, $dark, $dark, #062b13, $dark, $dark)
-//background-size: 100% 600%
-//animation: animateBg 10s linear infinite
+.background-gradient.colorful
+  background-image: linear-gradient(0deg,#cf5c5c,#c19b4a,#def2a0,#c6ee4a,#42eca6,#64b3d9,#208ea2,#498ada,#5b73df,#897ed3,#cf5c5c,#c19b4a)
+  opacity: 0.7
+  background-size: 100% 1100%
+  background-image: linear-gradient(0deg, $dark, $dark, #062b13, $dark, $dark)
+  background-size: 100% 600%
+  animation: animateBg 10s linear infinite
 
-//@keyframes animateBg
-//  0%
-//    background-position: 0% 0%
-//  100%
-//    background-position: 0% 100%
+@keyframes animateBg
+  0%
+    background-position: 0% 0%
+  100%
+    background-position: 0% 100%
+
 
 // Configure color schemes for LayoutColorChange plugin //
 
-//.page-background:after
-//  content: ""
-//  display: block
-//  position: fixed
-//  z-index: -1
-//  left: 0
-//  top: 0
-//  height: 100vh
-//  width: 100vw
-//  background: linear-gradient(180deg, rgba(0,0,0,0), $dark)
-
-
-.page-background.forum:before
+.background-gradient.forum
   background-color: #404040
 
-.page-background.posteditor:before
+.background-gradient.posteditor
   background-color: #552f6d
 
-.page-background.userprofile:before
+.background-gradient.userprofile
   background-color: #2c5e92
 
-.page-background.myposts:before
+.background-gradient.myposts
   background-color: #0e5c2a
 
 // MainLayout styling //
 
-.logo
-  cursor: pointer
-
-.logo-text
+.q-toolbar__title
+  font-size: 30px
   font-family: 'Montserrat', sans-serif
   font-weight: 500
+  color: white
+
+.q-toolbar
+  @media (min-width: $breakpoint-xs-min)
+    height: 70px
+
+.logo
+  @media (min-width: 415px)
+    align-items: center
+    justify-content: center
+
+.logo-text
+  @media (max-width: 414px)
+    display: none
+
+.logo-text-link
   color: white
   text-decoration: none
 
