--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -39,11 +39,15 @@ body.body--dark
 // Override default dark card background
 .q-card--dark
   background-color: rgba($dark, 0.3)
-  //background-color: $dark
+//background-color: $dark
 
 // Override default dark editor background
 .q-editor--dark
   background-color: rgba($dark, 0.3)
+
+// Override default dark editor background
+.q-dialog-plugin--dark
+  background-color: rgba($dark, 0.9)
 
 // Prepare background for color switching using transparent gradients
 .background-gradient
@@ -56,13 +60,9 @@ body.body--dark
   height: 100vh
   width: 100vw
 
-  background: linear-gradient(160deg, rgba(0,0,0,0), $dark 50%)
+  background: linear-gradient(160deg, rgba(0, 0, 0, 0), $dark 50%)
   transition: background-color 1000ms ease
 
-  // Test
-  //background: linear-gradient(90deg, #c074b2, #8ab5e8)
-  //background: linear-gradient(90deg, #2c5e92 0%, #552f6d 80%)
-  //opacity: 1
 
 // Test //
 .background-gradient-darken
@@ -74,30 +74,32 @@ body.body--dark
   top: 0
   height: 100vh
   width: 100vw
-  background: linear-gradient(180deg, rgba(0,0,0,0), $dark)
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0), $dark)
 
-.background-gradient.colorful
-  background-image: linear-gradient(0deg,#cf5c5c,#c19b4a,#def2a0,#c6ee4a,#42eca6,#64b3d9,#208ea2,#498ada,#5b73df,#897ed3,#cf5c5c,#c19b4a)
-  opacity: 0.7
-  background-size: 100% 1100%
-  background-image: linear-gradient(0deg, $dark, $dark, #062b13, $dark, $dark)
-  background-size: 100% 600%
-  animation: animateBg 10s linear infinite
+//.background-gradient.colorful
+//  background-image: linear-gradient(0deg,#cf5c5c,#c19b4a,#def2a0,#c6ee4a,#42eca6,#64b3d9,#208ea2,#498ada,#5b73df,#897ed3,#cf5c5c,#c19b4a)
+//  opacity: 0.7
+//  background-size: 100% 1100%
+//  background-image: linear-gradient(0deg, $dark, $dark, #062b13, $dark, $dark)
+//  background-size: 100% 600%
+//  animation: animateBg 10s linear infinite
 
 @keyframes animateBg
   0%
-    background-position: 0% 0%
+    background-position: 0 0
   100%
-    background-position: 0% 100%
+    background-position: 0 100%
 
 
 // Configure color schemes for LayoutColorChange plugin //
 
 .background-gradient.forum
-  background-color: #404040
+  //background-color: #404040
+  background: linear-gradient(90deg, #2c5e92 0%, #552f6d 80%)
 
 .background-gradient.posteditor
-  background-color: #552f6d
+  //background-color: #552f6d
+  background: linear-gradient(90deg, #c074b2, #8ab5e8)
 
 .background-gradient.userprofile
   background-color: #2c5e92
@@ -155,6 +157,6 @@ body.body--dark
     color: $primary
 
 .emoji-picker-color-override
-  --ep-color-bg: #{$dark} !important
-  --ep-color-sbg: #{$dark} !important
+  --ep-color-bg: #{rgba($dark, 0.6)} !important
+  --ep-color-sbg: #{rgba($dark, 0.3)} !important
   --ep-color-active: #{$primary} !important
