--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -50,9 +50,8 @@ body.body--dark
   background-color: rgba($dark, 0.9)
 
 // Prepare background for color switching using transparent gradients
-.background-gradient
-  content: ""
-  z-index: -2
+.background
+  content: ''
   display: block
   position: fixed
   left: 0
@@ -60,52 +59,58 @@ body.body--dark
   height: 100vh
   width: 100vw
 
-  background: linear-gradient(160deg, rgba(0, 0, 0, 0), $dark 50%)
-  transition: background-color 1000ms ease
+.background.gradient-color
+  z-index: -2000
+  background-size: 130% 100%
+  animation: breathing 10s infinite ease
 
+@keyframes breathing
+  0%
+    background-position: 0 0
+  50%
+    background-position: 100% 0
+  100%
+    background-position: 0 0
 
-// Test //
-.background-gradient-darken
-  content: ""
-  display: block
-  position: fixed
-  z-index: -1
-  left: 0
-  top: 0
-  height: 100vh
-  width: 100vw
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0), $dark)
+.background.gradient-darken
+  z-index: -1000
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0), #090707)
 
-//.background-gradient.colorful
-//  background-image: linear-gradient(0deg,#cf5c5c,#c19b4a,#def2a0,#c6ee4a,#42eca6,#64b3d9,#208ea2,#498ada,#5b73df,#897ed3,#cf5c5c,#c19b4a)
-//  opacity: 0.7
-//  background-size: 100% 1100%
-//  background-image: linear-gradient(0deg, $dark, $dark, #062b13, $dark, $dark)
-//  background-size: 100% 600%
-//  animation: animateBg 10s linear infinite
+// Configure color schemes for BackgroundGradient.js plugin //
+
+.background.gradient-color.forum
+  background-image: linear-gradient(90deg, #2c5e92 0%, #552f6d 80%)
+
+.background.gradient-color.post-editor
+  background-image: linear-gradient(60deg, #208ea2, #9ebf38)
+
+.background.gradient-color.user-profile
+  background-image: linear-gradient(120deg, #537895 0%, #09203f 74%)
+
+.background.gradient-color.my-posts
+  background-image: linear-gradient(130deg, #b74f4f, #c39848)
+
+.background.gradient-color.fun
+  background-image: linear-gradient(90deg, #cf5c5c, #c19b4a, #def2a0, #c6ee4a,#42eca6,#64b3d9,#208ea2,#498ada,#5b73df,#897ed3,#cf5c5c,#c19b4a)
+  background-size: 1100% 100%
+  animation: animateBg 5s linear infinite
 
 @keyframes animateBg
   0%
     background-position: 0 0
   100%
-    background-position: 0 100%
+    background-position: 100% 0
 
+// Gradient transition animation //
+.background.gradient-color.transition
+  opacity: 0
+  animation: fadeIn 1s ease forwards
 
-// Configure color schemes for LayoutColorChange plugin //
-
-.background-gradient.forum
-  //background-color: #404040
-  background: linear-gradient(90deg, #2c5e92 0%, #552f6d 80%)
-
-.background-gradient.posteditor
-  //background-color: #552f6d
-  background: linear-gradient(90deg, #c074b2, #8ab5e8)
-
-.background-gradient.userprofile
-  background-color: #2c5e92
-
-.background-gradient.myposts
-  background-color: #0e5c2a
+@keyframes fadeIn
+  0%
+    opacity: 0
+  100%
+    opacity: 1
 
 // MainLayout styling //
 
