--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -77,8 +77,10 @@ body.body--dark
   background: linear-gradient(180deg, rgba(0, 0, 0, 0), #090707)
 
 // Configure color schemes for BackgroundGradient.js plugin //
-
 .background.gradient-color.forum
+  background-image: linear-gradient(90deg, #2c5e92 0%, #552f6d 80%)
+
+.background.gradient-color.feed
   background-image: linear-gradient(90deg, #2c5e92 0%, #552f6d 80%)
 
 .background.gradient-color.post-editor
@@ -89,6 +91,9 @@ body.body--dark
 
 .background.gradient-color.my-posts
   background-image: linear-gradient(130deg, #b74f4f, #c39848)
+
+.background.gradient-color.auth
+  background-image: linear-gradient(120deg, #537895 0%, #09203f 74%)
 
 .background.gradient-color.fun
   background-image: linear-gradient(90deg, #cf5c5c, #c19b4a, #def2a0, #c6ee4a,#42eca6,#64b3d9,#208ea2,#498ada,#5b73df,#897ed3,#cf5c5c,#c19b4a)
