Fixed Text wrapping for the forum

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -179,3 +179,7 @@ body.body--dark
 
 .scroll-margin-navbar
   scroll-margin-top: $navbar-height + 10px
+
+.overflow-wrap
+  overflow-wrap: break-word
+  word-break: break-word
