--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -124,6 +124,7 @@ body.body--dark
   font-family: 'Montserrat', sans-serif
   font-weight: 500
   color: white
+  padding: 0
 
 .q-toolbar
   @media (min-width: $breakpoint-xs-min)
@@ -136,7 +137,8 @@ body.body--dark
 
 .logo-text
   @media (max-width: 414px)
-    display: none
+    //font-size: 25px
+    //display: none
 
 .logo-text-link
   color: white
