slight layout changes

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -27,6 +27,7 @@
 // Overall app theme //
 body
   font-family: 'Open Sans', sans-serif
+  font-size: 15px
 
 html
   // Force scrollbar visible at all times
