Fixed spotify search post creation

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -161,6 +161,8 @@ body.body--dark
 .q-drawer--dark.q-drawer--mobile
   background-color: $dark
 
+.q-tab-panels--dark
+  background-color: rgba($dark, 0.0)
 
 // Miscellaneous styles //
 
