--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -25,6 +25,18 @@ body
 html
   // Force scrollbar visible at all times
   overflow-y: scroll
+  overflow-x: hidden
+
+// Style scrollbar
+::-webkit-scrollbar
+  width: 10px
+
+::-webkit-scrollbar-track
+  background-color: $dark
+
+::-webkit-scrollbar-thumb
+  border-radius: 10px
+  background-color: rgba(white, 0.3)
 
 // Override default dark body background
 body.body--dark
@@ -42,6 +54,12 @@ body.body--dark
 // Override default dark editor background
 .q-dialog-plugin--dark
   background-color: rgba($dark, 0.9)
+
+// Override default footer color
+.q-footer
+  background-color: rgba($dark, 0.9)
+  border-top-left-radius: 20px
+  border-top-right-radius: 20px
 
 // Prepare background for color switching using transparent gradients
 .background
@@ -125,7 +143,7 @@ body.body--dark
     height: $navbar-height
 
 .logo
-  @media (min-width: 415px)
+  @media (min-width: 315px)
     align-items: center
     justify-content: center
 
@@ -138,15 +156,41 @@ body.body--dark
   color: white
   text-decoration: none
 
-.menu-list .q-item
+.menu-list-bg
+  position: absolute
+  width: 100%
+  height: 100%
+  border-radius: 0 32px 32px 0
+  background-color: rgba($dark, 0.85)
+  overflow: hidden
+
+.drawer-list
+  border-radius: 0 32px 32px 0
+  transition: background-color 0.5s
+  overflow: hidden
+  background-color: rgba($dark, 0.3)
+
+.drawer-list:hover
+  @media (max-width: $breakpoint-md-max)
+    background-color: rgba($dark, 0.85)
+
+.drawer-list .q-item
   border-radius: 0 32px 32px 0
 
-.header-background
-  background-color: rgba($dark, 0.0)
-  transition: background-color 300ms ease
+.toolbar
+  background-color: transparent
+  transition: background-color 0.3s ease
 
-.header-background.scroll
+.toolbar.scroll
   background-color: rgba($dark, 0.85)
+
+#pixel-anchor-toolbar-scroll
+  position: absolute
+  width: 1px
+  height: 1px
+  top: 50px
+  left: 0
+
 
 .q-drawer--dark
   background-color: rgba($dark, 0)
