improved emoji menu

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -215,9 +215,9 @@ body.body--dark
       max-width: 500px
 
 .emoji-picker-color-override
-  --ep-color-bg: #rgba($dark, 0.6) !important
-  --ep-color-sbg: #rgba($dark, 0.3) !important
-  --ep-color-active: $primary !important
+  --ep-color-bg: #{rgba($dark, 0.8)} !important
+  --ep-color-sbg: #{rgba($dark, 0.3)} !important
+  --ep-color-active: #{$primary} !important
 
 .scroll-margin-navbar
   scroll-margin-top: $navbar-height + 10px
