--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -262,8 +262,9 @@ body.body--dark
   opacity: 0
   transform: translate(-2em, 0)
 
+.zoom-enter-active,
 .zoom-leave-active
-  animation-duration: 0.5s
+  animation-duration: 0.3s
   animation-fill-mode: both
   animation-name: zoom
 
